[package]
name = "simple_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SQLx with SQLite support and the tokio runtime
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
